--- a/app/src/main/res/layout/camera_preview.xml
+++ b/app/src/main/res/layout/camera_preview.xml
@@ -2,16 +2,24 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
     <FrameLayout
         android:id="@+id/camera_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
+    <FrameLayout
+        android:id="@+id/on_camera_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent" />
+
+
     <Button
         android:id="@+id/button_capture"
-        android:text="Capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
-        android:layout_marginBottom="12dp"/>
+        android:layout_marginBottom="12dp"
+        android:text="Capture" />
 </FrameLayout>
